# fastapi-insights

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: in_memory.py  redis.py  sqlite.py
fastapi_insights/: __init__.py  config.py  logger.py  middleware.py  router.py
fastapi_insights/backends/: __init__.py  base.py  in_memory.py  redis.py  sqlite.py
fastapi_insights/static/frontend/: index.html  main.js
tests/: conftest.py  test_fastapi_metrics_integration.py  test_metrics_store.py  test_middleware.py  test_package_artifacts.py  test_redis_backends.py  test_sqlite_store.py
